SDQL Java port: QueryPackageVisitor, FieldsNodeBuilder, LineageAnalyzer, CLI
- Add sdql package with model, visitor, analysis, lineage, fields, export, io
- QueryPackageVisitor extracts SELECT, FROM, JOIN, WHERE, GROUP BY, ORDER BY, TOTALS, UNION
- FieldsNodeBuilder creates fields_node.json and table_alias_map.json
- FieldLineageAnalyzer finds ВидОбязательств_гр1а lineage chains
- QueryTextExporter splits queries to node_{id}.sql/.md, texts_index.json, normalized_queries.sql
- SdqlCli orchestrates parsing, analysis, export
- Java 17 compatibility fixes (Tokenizer, getFirst/getLast, record patterns)
- Gradle toolchain set to Java 17, Jackson + JGraphT dependencies
- Integration tests for example.sql (5 nodes, 2 edges) and example_258.sql (116 nodes, 155 edges)

Refs Redmine #646